examples/units/m12_5_arith_err_dimensionless.err.expected
error: type mismatch in arithmetic operator '+'
  --> examples/units/m12_5_arith_err_dimensionless.kai:8:17
    |
  8 |   let bad = usd + raw
    |                 ^
  = note: expected: Real<USD>
  = note: found:    Real
warning: unused binding `bad`
  --> examples/units/m12_5_arith_err_dimensionless.kai:8:7
    |
  8 |   let bad = usd + raw
    |       ^
  = help: prefix with `_` to mark as intentionally unused
