examples/units/m12_5_arith_err_dimensionless.kai
# m12.5: USD plus a bare Real (dimensionless) must reject.

unit USD

pub fn main() : Unit  / Console = {
  let usd : Real<USD> = 1.0<USD>
  let raw : Real = 1.0
  let bad = usd + raw
  print("never reached")
}
